Adjust “operation links” position, to avoid overlap with comment content.

--- a/app/assets/stylesheets/list.css.scss
+++ b/app/assets/stylesheets/list.css.scss
@@ -67,7 +67,7 @@
         .operations {
           position: absolute;
           right: 10px;
-          top: 10px;
+          top: -20px;
           display: none;
         }
       }
